<resources>
    <string name="app_name" translatable="false">WeatherAppS</string>

    <!--    Logo-->
    <string name="logo" translatable="false">WeatherApp</string>

    <!--    Layout Main-->
    <string name="Baseapi" translatable="false">37fb2ab875e61b9769e410901358661b</string>
    <string name="tvLocation">Localizacion</string>
    <string name="temperature">Temperatura</string>
    <string name="sense">Sensacion</string>
    <string name="date">Fecha</string>
    <string name="stringTvWind">Wind</string>
    <string name="stringTvValueWind" translatable="false">9 km/h</string>
    <string name="stringTvValuePressure" translatable="false">100</string>
    <string name="stringTvPressure">Presion</string>
    <string name="stringTvValueHumidity" translatable="false">1000</string>
    <string name="stringTvHumidity">Humidity</string>
    <string name="stringTemperatureMax" translatable="false">Max: 30°</string>
    <string name="stringTemperatureMin" translatable="false">Min: 20°</string>
    <string name="imageviewiconhoursdescription" translatable="false">Image relate to Weather Forecast at Hours</string>
    <string name="image_description_item_days" translatable="false">Image relate to Weather Forecast at Day</string>
    <string name="weather_status_image" translatable="false">image_shows_weather_status</string>

    <!--    CardViewHours-->
    <string name="stringHourCv" translatable="false">11:00</string>
    <string name="stringTemperatureCv" translatable="false">21°</string>


    <string name="sensation">Sensacion</string>
    <string name="updatedAt">Actualizacion</string>
    <string name="error_ocurred">A ocurrido un error al cargar los datos</string>
    <string name="permission_retionale">Se requieren permisos para usar esta app.</string>
    <string name="no_location_detected">No se puede acceder a su ubicacion, rectifique que el servicio GPS este activado.</string>
    <string name="permission_denied_explanation">Permiso denegado.</string>
    <string name="settings">Ajustes</string>
    <string name="humidity">Humidity</string>
    <string name="pressure">Pressure</string>
    <string name="wind">Wind</string>
    <string name="sunrise">Sunrise</string>
    <string name="sunset">Sunset</string>
    <string name="textSensacion">Sense</string>
    <string name="days_item_days">Lunes</string>
    <string name="description_days">Description</string>
    <string name="statusDay">Tormeta</string>
    <string name="grados" translatable="false">35°</string>
    <string name="negativeGrados" translatable="false">-2°</string>
    <string name="regresar" translatable="false"><![CDATA[< Back]]></string>
    <string name="unidad_temperatura" translatable="false">Unidad</string>
    <string name="messages_header">Configuraciones</string>

</resources>