<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginHorizontal="8dp"
    android:layout_marginTop="8dp"
    app:cardCornerRadius="16dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/black">

        <TextView
            android:id="@+id/textViewDay"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/days_item_days"
            android:textColor="@color/medium_white"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="Fri" />

        <ImageView
            android:id="@+id/imageViewIconDays"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginTop="5dp"
            android:contentDescription="@string/description_days"
            app:layout_constraintEnd_toEndOf="@+id/textViewDay"
            app:layout_constraintStart_toStartOf="@+id/textViewDay"
            app:layout_constraintTop_toBottomOf="@+id/textViewDay"
            tools:ignore="ImageContrastCheck"
            tools:srcCompat="@tools:sample/avatars" />

        <TextView
            android:id="@+id/textViewForecastDays"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/statusDay"
            android:textColor="@color/medium_white"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@+id/imageViewIconDays"
            app:layout_constraintStart_toStartOf="@+id/imageViewIconDays"
            app:layout_constraintTop_toBottomOf="@+id/imageViewIconDays"
            tools:text="Clear" />

        <TextView
            android:id="@+id/textViewTempInDay"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/grados"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toStartOf="@+id/textViewForecastDays"
            app:layout_constraintStart_toStartOf="@+id/textViewForecastDays"
            app:layout_constraintTop_toBottomOf="@+id/textViewForecastDays"
            tools:text="+35°" />

        <TextView
            android:id="@+id/textViewTempInNight"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:text="@string/negativeGrados"
            android:textColor="@color/medium_white"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@+id/textViewTempInDay"
            app:layout_constraintTop_toTopOf="@+id/textViewTempInDay"
            tools:text="-4°" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</com.google.android.material.card.MaterialCardView>